# planning-benchmarks

./: .gitattributes  .gitignore  README.md  generate_instances.sh  pyproject.toml  pyrightconfig.json  validate.error.json  validate.py
.github/workflows/: ci_data_release.yml  ci_pytest.yml  ci_release.yml  data_release.yml  release.yml
data/classical/downward-benchmarks/: README.md
data/classical/htg-domains/: readme.md
data/numeric/ipc2023/: README.md
data/numeric/mine-pddl/: main.py  pyproject.toml
generators/: README.md  __init__.py
generators/classical/barman/: generator.py
generators/classical/blocks_3/: generator.py
generators/classical/childsnack/: domain.pddl
generators/classical/delivery/: __init__.py  generate.py
generators/classical/driverlog/: generator.py
generators/classical/ferry/: generator.py
generators/classical/floortile/: generator.py
generators/classical/goldminer/: generator.py
generators/classical/grid/: __init__.py  generator.py
generators/classical/gripper/: generator.py
generators/classical/hiking_binary/: __init__.py  generator.py
generators/classical/logistics/: __init__.py  generator.c  generator.py
generators/classical/miconic/: generator.c
generators/classical/nomystery/: generator.py
generators/classical/satellite/: __init__.py  generator.py
generators/classical/spanner/: generator.py
generators/classical/tpp/: README.md  generator.c  generator.py
generators/classical/visitall/: domain.pddl
generators/classical/woodworking/: domain.pddl
learning/: .gitignore  generate_instances.sh  obfuscate_pddl.py
learning/classical/barman/: generate_instances.py
learning/classical/blocks_3/: generate_instances.py
learning/classical/blocks_4/: generate_instances.py
learning/classical/childsnack/: generate_instances.py
learning/classical/delivery/: generate_instances.py
learning/classical/driverlog/: generate_instances.py
learning/classical/ferry/: generate_instances.py
learning/classical/grid/: generate_instances.py
learning/classical/gripper/: generate_instances.py
learning/classical/hiking/: generate_instances.py
learning/classical/hiking_binary/: generate_instances.py
scripts/: extract_requirements.py  package_data.py  strict_clean.py
src/pypddl_datasets/: __init__.py  discovery.py  fetching.py  registry.txt  requirements.domains.json  requirements.json  requirements.py  requirements.suites.json  requirements.tasks.json  suites.py
suites/classical/: suite.py  suite_test.py
suites/numeric/: suite.py  suite_test.py
tests/: conftest.py  test_datasets.py
typings/pooch/: __init__.pyi
(+8440 files in other folders)
