[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypddl-datasets"
version = "0.0.7"
description = "Download PDDL planning benchmark suites: classical, numeric, profiling, and learning splits."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Dominik Drexler", email = "dominik.drexler@liu.se" }]
dependencies = [
    "pooch>=1.8",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/planning-and-learning/planning-benchmarks"

[tool.hatch.build.targets.wheel]
packages = ["src/pypddl_datasets"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "README.md"]
